# aura-compiler

./: CMakeLists.txt  README.md  grammar.md
src/errors/: Error.h
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.h
src/lexer/reader/: Reader.cpp  Reader.h
src/lexer/rules/: Identifier.cpp  Identifier.h  Number.cpp  Number.h  Operator.cpp  Operator.h  String.cpp  String.h  Whitespace.cpp  Whitespace.h
src/lexer/utils/: Utils.cpp  Utils.h
tests/lexer_tests/: CMakeLists.txt  Lexer_tests.cpp  Reader_tests.cpp
